# LyricsSearcher

./: README.md  pyproject.toml  requirements.txt  test.txt
LyricsSearcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lyrics_searcher/: __init__.py  api.py  auth.py  cli.py  lyric_finder.py  utils.py
lyricsgenius/: __init__.py  genius.py
