[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LyricsSearcher"
dynamic = ["version"]
description = "Python tool to get lyrics for songs."
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ['music', 'lyrics', 'txt', 'lrc', 'spotify', 'genius', 'lyricsgenius']
authors = [{name = "Drag", email = "juserysthee@gmail.com"}, {name = "Justin Erysthee"}]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]
dependencies = [
    'requests~=2.31.0',
    'beautifulsoup4~=4.12.2',
    'syrics~=0.0.1.8',
    'mutagen~=1.46.0'
]

[project.optional-dependencies]
tests = [
    'coverage~=7.2.5',
    'parameterized~=0.9.0'
]

[project.scripts]
lyrics = "lyrics_searcher.cli:main"

[tool.setuptools]
packages = ['lyrics_searcher', 'lyricsgenius', 'lyricsgenius.api', 'lyricsgenius.api.puplic_methods',
'lyricsgenius.types']

[tool.setuptools.dynamic]
version = {attr = "lyrics_searcher.VERSION"}